--- a/styles/grid-layout.css
+++ b/styles/grid-layout.css
@@ -10,129 +10,97 @@
 		"temp" 
 		"voorr"
 		"km" 
-		"planet" 
+		"planet";
 }
 
-.titel {
-	grid-area: titel;
+	.titel {
+		grid-area: titel;
+	}
+
+	.box1 {
+		grid-area: temp;
+	}
+
+	.box2 {
+		grid-area: voorr;
+	}
+
+	.box3 {
+		grid-area: km;
+	}
+
+	.box4 {
+		grid-area: planet;
+	}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+
+	body {
+	 	background-image: url("backgroundspace.jpg");
+	 }
+
+	.grid-container {
+	    display: grid;
+	    grid-template-columns: 1fr 1fr;
+	   	grid-template-rows: 1fr 1fr 1fr 1fr;
+	    grid-template-areas: 
+	    	"titel titel"
+	    	"temp voorr"
+	    	"km planet"; 
+	  }
+
+	.titel {
+
+		margin: 0;
+		padding: 0;
+	}
 }
 
-.box1 {
-	grid-area: temp;
+@media only screen and (min-width: 1025px) and (max-width: 1686px){
+
+	body {
+ 	background-image: url("backgroundspace.jpg");
+ 	}
+ 		 h1 {
+	 	margin: 150px 0px 0px 30px;
+	 	width: 91%;
+	 }
+
+	.grid-container {
+	    display: grid;
+	    grid-template-columns: 1fr 1fr 1fr;
+	   	grid-template-rows: 1fr 1fr 1fr 1fr;
+	    grid-template-areas: 
+	    	"titel titel temp"
+	    	"voorr km planet";
+	  }
+
+	.titel {
+		margin: 0;
+		padding: 0;
+		min-height: 100%;
+	}
 }
 
-.box2 {
-	grid-area: voorr;
-}
+@media only screen and (min-width: 1687px){
 
-.box3 {
-	grid-area: km;
-}
+	body {
+	 	background-image: url("backgroundspace.jpg");
+	}
 
-.box4 {
-	grid-area: planet;
-}
+	.grid-container {
+	    display: grid;
+	    grid-template-columns: 1fr 1fr 1fr 1fr;
+	   	grid-template-rows: 1fr 1fr 1fr;
+	    grid-template-areas: 
+	    	"titel titel titel titel"
+	    	"temp voorr km planet";
+	 }
 
-@media only screen and (min-width: 500px) and (max-width: 699px){
+	.titel {
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-   	grid-template-rows: 1fr 2fr 2fr;
-    grid-template-areas: 
-    	"titel titel"
-    	"temp voorr"
-    	"km planet"; 
-  }
+		margin: 0;
+		padding: 0;
+	}
 
-.titel {
-	grid-area: titel;
-	margin: 0;
-	padding: 0;
-}
-
-  .box1 {
-	grid-area: temp;
-}
-
-.box2 {
-	grid-area: voorr;
-}
-
-.box3 {
-	grid-area: km;
-}
-
-.box4 {
-	grid-area: planet;
-}
-}
-
-@media only screen and (min-width: 700px) and (max-width: 799px){
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-   	grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 
-    	"titel titel temp"
-    	"voorr km planet"
-  }
-
-.titel {
-	grid-area: titel;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-
-  .box1 {
-	grid-area: temp;
-}
-
-.box2 {
-	grid-area: voorr;
-}
-
-.box3 {
-	grid-area: km;
-}
-
-.box4 {
-	grid-area: planet;
-}
-}
-
-@media only screen and (min-width: 800px){
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-   	grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-areas: 
-    	"titel titel titel titel"
-    	"temp voorr km planet"
-  }
-
-.titel {
-	grid-area: titel;
-	margin: 0;
-	padding: 0;
-}
-
-  .box1 {
-	grid-area: temp;
-}
-
-.box2 {
-	grid-area: voorr;
-}
-
-.box3 {
-	grid-area: km;
-}
-
-.box4 {
-	grid-area: planet;
-}
 }
